Added clj-async-profiler dependency and testing code